Fix version dropdown position and z-index
- Change panel from right:0 to left:0 so it opens rightward
- Increase z-index from 100 to 200 to stay above nav sidebar
- Revert unneeded hero-inner margin changes

--- a/src/css/component-home-v3.css
+++ b/src/css/component-home-v3.css
@@ -89,7 +89,6 @@ html[data-theme=dark] .ch3-hero::after {
   position: relative;
   z-index: 1;
   max-width: 1100px;
-  margin-left: 40px;
   overflow: visible;
   display: flex;
   flex-direction: column;
@@ -249,8 +248,8 @@ html:not([data-theme=dark]) .sm-ver-pill-caret {
 .sm-ver-panel {
   position: absolute;
   top: calc(100% + 10px);
-  right: 0;
-  z-index: 100;
+  left: 0;
+  z-index: 200;
   width: 560px;
   max-width: calc(100vw - 48px);
   background: #fff;
@@ -1581,10 +1580,6 @@ html[data-theme="dark"] .ch3-help-btn-secondary:hover {
     margin-left: 0;
     margin-right: 0;
     width: 100%;
-  }
-
-  .ch3-hero-inner {
-    margin-left: 0;
   }
 
   .doc .ch3-page-title {
